--- a/res/layout/activity_third.xml
+++ b/res/layout/activity_third.xml
@@ -1,13 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
     >
-				<Button 
-				    android:id="@+id/third_bt1"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    />	
+
+    
     								
-</LinearLayout>
+</RelativeLayout>
