--- a/res/layout/guangchang.xml
+++ b/res/layout/guangchang.xml
@@ -2,13 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/gray"
+    android:id="@+id/guangchang" >
     
-	<ListView 
-   	    android:id="@+id/listView2"
-   	    android:layout_width="match_parent"
-   	    android:layout_height="match_parent"
-	    ></ListView>
-    
+	
+<ListView 
+    android:id="@+id/listview3"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_white_1"
+    android:paddingLeft="25dip"
+     android:paddingRight="25dip"
+     android:layout_marginBottom="10dip"
+    ></ListView>
+<ImageView 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/block_shadow"/>
+
+
     
 </LinearLayout>
